syntax = "proto3";
package token;
option go_package = "github.com/zenpk/dorm-system/internal/service/token";

import "common.proto";

service Token{
  rpc GenAllToken (GenAllTokenRequest) returns (TokenReply){}
  rpc GenAccessToken (GenAccessTokenRequest) returns (TokenReply){}
}

message GenAllTokenRequest{
  uint64 userId = 1;
}

message GenAccessTokenRequest{
  string refreshToken = 1;
}

message TokenReply{
  common.CommonResponse err = 1;
  string accessToken = 2;
  string refreshToken = 3;
}
